Fix unit test for no internal connection case